--- a/blog-details.html
+++ b/blog-details.html
@@ -41,45 +41,38 @@
  <header id="header" class="fixed-top">
   <div class="container d-flex">
 
-    <div class="logo mr-auto">
-      <img src="assets/img/SFC.jpg">
-      <!--
-      <h1 class="text-light"><a href="index.html"><span>e</span>Business</a></h1>
-      -->
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-    </div>
-
-    <nav class="nav-menu d-none d-lg-block">
+    <nav class="nav-menu d-none d-lg-block" id="nav-cha">
       <ul>
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="team.html">Team</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="portfolio.html">Newsletter</a></li>
         <li><a href="blog.html">Blog</a></li>
-        <!-- li class="drop-down"><a href="">Drop Down</a>
-          <ul>
-            <li><a href="#">Drop Down 1</a></li>
-            <li class="drop-down"><a href="#">Drop Down 2</a>
-              <ul>
-                <li><a href="#">Deep Drop Down 1</a></li>
-                <li><a href="#">Deep Drop Down 2</a></li>
-                <li><a href="#">Deep Drop Down 3</a></li>
-                <li><a href="#">Deep Drop Down 4</a></li>
-                <li><a href="#">Deep Drop Down 5</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Drop Down 3</a></li>
-            <li><a href="#">Drop Down 4</a></li>
-            <li><a href="#">Drop Down 5</a></li>
-          </ul>
-        </li -->
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="blog.html">Interview</a></li>
+        <li><a href="blog.html">Podcasts</a></li>
+        <li><a href="blog.html">Gallery</a></li>
+      <!-- li class="drop-down"><a href="">Drop Down</a>
+        <ul>
+          <li><a href="#">Drop Down 1</a></li>
+          <li class="drop-down"><a href="#">Drop Down 2</a>
+            <ul>
+              <li><a href="#">Deep Drop Down 1</a></li>
+              <li><a href="#">Deep Drop Down 2</a></li>
+              <li><a href="#">Deep Drop Down 3</a></li>
+              <li><a href="#">Deep Drop Down 4</a></li>
+              <li><a href="#">Deep Drop Down 5</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Drop Down 3</a></li>
+          <li><a href="#">Drop Down 4</a></li>
+          <li><a href="#">Drop Down 5</a></li>
+        </ul>
+      </li -->
+      <li><a href="contact.html">Contact</a></li>
 
-      </ul>
+    </ul>
     </nav><!-- .nav-menu -->
-
   </div>
 </header><!-- End Header -->
 
@@ -410,24 +403,25 @@
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <div class="footer-logo">
-                  <h2><span>e</span>Business</h2>
+               <div class="footer-logo">
+                  <h2>SFC</h2>
                 </div>
 
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
+                <p> The club was founded in 2015 by a group of 5 finance enthusiasts who were passionate about creating 
+                  an association where other students  can develop themselves and share opportunities. Over 
+                  the years, the club has drawn over 60 active members across several disciplines in the University of 
+                  Ibadan and has expanded to include 2 other divisions asides finance namely Human Resources/Consulting and Business/Enterpreneurship
+                  </p>
                 <div class="footer-icons">
                   <ul>
                     <li>
-                      <a href="#"><i class="fa fa-facebook"></i></a>
+                      <a href="https://www.linkedin.com/company/student-finance-club-ui"><i class="fa fa-linkedin"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-twitter"></i></a>
+                      <a href="https://twitter.com/sfcunibadan?s=08"><i class="fa fa-twitter"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-google"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="fa fa-pinterest"></i></a>
+                      <a href="https://www.instagram.com/Sfcunibadan/"><i class="fa fa-instagram"></i></a>
                     </li>
                   </ul>
                 </div>
@@ -438,13 +432,13 @@
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <h4>information</h4>
+                <h4>Location</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                  University of Ibadan, Oyo state, Nigeria
                 </p>
                 <div class="footer-contacts">
-                  <p><span>Tel:</span> +123 456 789</p>
-                  <p><span>Email:</span> contact@example.com</p>
+                  <p><span>Tel:</span> +2348063910823</p>
+                  <p><span>Email:</span> sfcunibadan@gmail.com</p>
                   <p><span>Working Hours:</span> 9am-5pm</p>
                 </div>
               </div>
@@ -475,7 +469,7 @@
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="copyright text-center">
               <p>
-                &copy; Copyright <strong>eBusiness</strong>. All Rights Reserved
+                &copy; Copyright <strong>SFC</strong>. All Rights Reserved
               </p>
             </div>
             <div class="credits">
@@ -485,7 +479,7 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eBusiness
             -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              Designed by <a href="https://tijaniazeez.ml/">Tijazz ICT Solutions</a>
             </div>
           </div>
         </div>
