--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
       </div>-->
 
 
-      <nav class="nav-menu d-none d-lg-block">
+      <nav class="nav-menu d-none d-lg-block" id="nav-cha">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
@@ -108,7 +108,7 @@
                 <div class="single-icon">
                   <i class="fa fa-mobile"></i>
                   <p>
-                    Call: +1 5589 55488 55<br>
+                    Call: +2348063910823<br>
                     <span>Monday-Friday (9am-5pm)</span>
                   </p>
                 </div>
@@ -120,7 +120,7 @@
                 <div class="single-icon">
                   <i class="fa fa-envelope-o"></i>
                   <p>
-                    Email: info@example.com<br>
+                    Email: sfcunibadan@gmail.com<br>
                     <span>Web: www.example.com</span>
                   </p>
                 </div>
@@ -132,8 +132,8 @@
                 <div class="single-icon">
                   <i class="fa fa-map-marker"></i>
                   <p>
-                    Location: A108 Adam Street<br>
-                    <span>NY 535022, USA</span>
+                    Location: University of Ibadan <br>
+                    <span>Oyo state, Nigeria</span>
                   </p>
                 </div>
               </div>
@@ -144,7 +144,7 @@
             <!-- Start Google Map -->
             <div class="col-md-6 col-sm-6 col-xs-12">
               <!-- Start Map -->
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3956.275385262781!2d3.8869386143197007!3d7.434749413962482!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1039f346e5aa3d35%3A0x8e369476dc8f1c09!2sUniversity%20of%20Ibadan!5e0!3m2!1sen!2sng!4v1589457872059!5m2!1sen!2sng" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
               <!-- End Map -->
             </div>
             <!-- End Google Map -->
@@ -196,24 +196,25 @@
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <div class="footer-logo">
+               <div class="footer-logo">
                   <h2>SFC</h2>
                 </div>
 
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
+                <p> The club was founded in 2015 by a group of 5 finance enthusiasts who were passionate about creating 
+                  an association where other students  can develop themselves and share opportunities. Over 
+                  the years, the club has drawn over 60 active members across several disciplines in the University of 
+                  Ibadan and has expanded to include 2 other divisions asides finance namely Human Resources/Consulting and Business/Enterpreneurship
+                  </p>
                 <div class="footer-icons">
                   <ul>
                     <li>
-                      <a href="#"><i class="fa fa-facebook"></i></a>
+                      <a href="https://www.linkedin.com/company/student-finance-club-ui"><i class="fa fa-linkedin"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-twitter"></i></a>
+                      <a href="https://twitter.com/sfcunibadan?s=08"><i class="fa fa-twitter"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-google"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="fa fa-pinterest"></i></a>
+                      <a href="https://www.instagram.com/Sfcunibadan/"><i class="fa fa-instagram"></i></a>
                     </li>
                   </ul>
                 </div>
@@ -224,13 +225,13 @@
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <h4>information</h4>
+                <h4>Location</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                  University of Ibadan, Oyo state, Nigeria
                 </p>
                 <div class="footer-contacts">
-                  <p><span>Tel:</span> +123 456 789</p>
-                  <p><span>Email:</span> contact@example.com</p>
+                  <p><span>Tel:</span> +2348063910823</p>
+                  <p><span>Email:</span> sfcunibadan@gmail.com</p>
                   <p><span>Working Hours:</span> 9am-5pm</p>
                 </div>
               </div>
