--- a/team.html
+++ b/team.html
@@ -53,7 +53,7 @@
       </div>-->
 
 
-      <nav class="nav-menu d-none d-lg-block">
+      <nav class="nav-menu d-none d-lg-block" id="nav-cha">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
@@ -353,24 +353,25 @@
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <div class="footer-logo">
+               <div class="footer-logo">
                   <h2>SFC</h2>
                 </div>
 
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
+                <p> The club was founded in 2015 by a group of 5 finance enthusiasts who were passionate about creating 
+                  an association where other students  can develop themselves and share opportunities. Over 
+                  the years, the club has drawn over 60 active members across several disciplines in the University of 
+                  Ibadan and has expanded to include 2 other divisions asides finance namely Human Resources/Consulting and Business/Enterpreneurship
+                  </p>
                 <div class="footer-icons">
                   <ul>
                     <li>
-                      <a href="#"><i class="fa fa-facebook"></i></a>
+                      <a href="https://www.linkedin.com/company/student-finance-club-ui"><i class="fa fa-linkedin"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-twitter"></i></a>
+                      <a href="https://twitter.com/sfcunibadan?s=08"><i class="fa fa-twitter"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-google"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="fa fa-pinterest"></i></a>
+                      <a href="https://www.instagram.com/Sfcunibadan/"><i class="fa fa-instagram"></i></a>
                     </li>
                   </ul>
                 </div>
@@ -381,13 +382,13 @@
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <h4>information</h4>
+                <h4>Location</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                  University of Ibadan, Oyo state, Nigeria
                 </p>
                 <div class="footer-contacts">
-                  <p><span>Tel:</span> +123 456 789</p>
-                  <p><span>Email:</span> contact@example.com</p>
+                  <p><span>Tel:</span> +2348063910823</p>
+                  <p><span>Email:</span> sfcunibadan@gmail.com</p>
                   <p><span>Working Hours:</span> 9am-5pm</p>
                 </div>
               </div>
