--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 
       </div>-->
 
-      <nav class="nav-menu d-none d-lg-block">
+      <nav class="nav-menu d-none d-lg-block" id="nav-cha">
         <ul>
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -173,31 +173,25 @@
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <div class="footer-logo">
+               <div class="footer-logo">
                   <h2>SFC</h2>
                 </div>
 
-                <p>The Student Finance Club, University of Ibadan, is a highly organized, student-run institution, 
-                  focused on preparing her members for success in professional roles at all levels of Finance, 
-                  Human Resources & Consulting, and Business & Entrepreneurship by providing members with 
-                  cutting edge skills and training relevant to their respective industries.
-                  The club serves as a central hub for connecting and developing students that are interested in 
-                  developing themselves personally and professionally. SFC UI has a proven track record of 
-                  excellence, having successfully produced members who have gone on to secure highly-
-                  competitive opportunities.</p>
+                <p> The club was founded in 2015 by a group of 5 finance enthusiasts who were passionate about creating 
+                  an association where other students  can develop themselves and share opportunities. Over 
+                  the years, the club has drawn over 60 active members across several disciplines in the University of 
+                  Ibadan and has expanded to include 2 other divisions asides finance namely Human Resources/Consulting and Business/Enterpreneurship
+                  </p>
                 <div class="footer-icons">
                   <ul>
                     <li>
-                      <a href="#"><i class="fa fa-facebook"></i></a>
+                      <a href="https://www.linkedin.com/company/student-finance-club-ui"><i class="fa fa-linkedin"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-twitter"></i></a>
+                      <a href="https://twitter.com/sfcunibadan?s=08"><i class="fa fa-twitter"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-google"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="fa fa-pinterest"></i></a>
+                      <a href="https://www.instagram.com/Sfcunibadan/"><i class="fa fa-instagram"></i></a>
                     </li>
                   </ul>
                 </div>
@@ -208,13 +202,13 @@
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <h4>information</h4>
+                <h4>Location</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                  University of Ibadan, Oyo state, Nigeria
                 </p>
                 <div class="footer-contacts">
-                  <p><span>Tel:</span> +123 456 789</p>
-                  <p><span>Email:</span> contact@example.com</p>
+                  <p><span>Tel:</span> +2348063910823</p>
+                  <p><span>Email:</span> sfcunibadan@gmail.com</p>
                   <p><span>Working Hours:</span> 9am-5pm</p>
                 </div>
               </div>
